# terrain-builder

./: .gitignore  CMakeLists.txt  NOTICE  README.md  batch-builder.py  batch-converter.py  batch-merger.py  license_header_template.txt  out.txt  thread_sanitizer_suppression.txt
.github/workflows/: ci.yml
docs/tile-downloader/: download.sh  root_tile_list
docs/tntn/: NOTICE
src/: CMakeLists.txt
src/terrainbuilder/: border.h  fi_image.h  gltf_writer.h  main.cpp  mesh_builder.cpp  mesh_builder.h  mesh_io.h  non_copyable.h  raw_dataset_reader.h  terrain_mesh.h  terrainbuilder.cpp  terrainbuilder.h  texture_assembler.h  tile_downloader.cpp  tile_provider.h
src/terrainconvert/: cli.cpp  cli.h  main.cpp
src/terrainlib/: Dataset.cpp  Dataset.h  DatasetReader.cpp  DatasetReader.h  Image.cpp  Image.h  ParallelTileGenerator.cpp  ParallelTileGenerator.h  ParallelTiler.cpp  ParallelTiler.h  ProgressIndicator.cpp  TileHeightsGenerator.cpp  TileHeightsGenerator.h  Tiler.h  TopDownTiler.cpp  TopDownTiler.h  alpine_raster.cpp  alpine_raster.h  cesium_tin_terra.cpp  cesium_tin_terra.h  log.cpp  log.h  srs.h
src/terrainlib/algorithms/: primitives.h  raster_triangle_scanline.h
src/terrainlib/ctb/: CTBException.hpp  GlobalGeodetic.hpp  GlobalMercator.hpp  Grid.hpp  NOTICE  TileCoordinate.hpp
src/terrainlib/mesh/: gltf_writer.h  io.cpp  io.h  raw_gltf.cpp  raw_gltf.h  terrain_mesh.cpp  terrain_mesh.h
src/terrainlib/tntn/: BinaryIO.cpp  BinaryIO.h  Delaunator.cpp  DelaunayMesh.cpp  DelaunayMesh.h  DelaunayTriangle.cpp  DelaunayTriangle.h  File.cpp  File.h  FileFormat.h  Mesh.cpp  Mesh.h  Mesh2Raster.cpp  Mesh2Raster.h  MeshIO.cpp  MeshIO.h  MeshMode.h  MeshWriter.cpp  MeshWriter.h  NOTICE  OFFReader.cpp  OFFReader.h  ObjPool.h  Points2Mesh.cpp  Points2Mesh.h  QuadEdge.cpp  QuadEdge.h  QuantizedMeshIO.cpp  QuantizedMeshIO.h  Raster.h  RasterIO.cpp  RasterIO.h  SuperTriangle.cpp  SuperTriangle.h  SurfacePoints.cpp  SurfacePoints.h  TerraMesh.cpp  TerraMesh.h  TerraUtils.cpp  TerraUtils.h  (+18 more)
src/terrainmerger/: cgal.h  cli.cpp  cli.h  convert.cpp  convert.h  fi_image.h  gltf_writer.h  io.cpp  io.h  log.cpp  log.h  main copy.cpp  main.cpp  merge.cpp  merge.h  non_copyable.h  pch.h  simplify.cpp  simplify.h  terrain_mesh.cpp  terrain_mesh.h  uv_map.cpp  uv_map.h  validate.h
src/terrainsplitter/: cgal.h  cli.cpp  cli.h  convert.h  main.cpp  validate.h
src/tile_downloader/: main.cpp
terrainbuilder/: main.cpp
terrainlib/: AlpineRasterGenerator.cpp  AlpineRasterGenerator.h  BottomUpTiler.cpp  BottomUpTiler.h  Dataset.cpp  Dataset.h  DatasetReader.cpp  DatasetReader.h  Exception.h  HeightData.h  Image.cpp  Image.h  MetaDataGenerator.cpp  MetaDataGenerator.h  ParallelTileGenerator.cpp  ParallelTileGenerator.h  ParallelTiler.cpp  ParallelTiler.h  ProgressIndicator.cpp  ProgressIndicator.h  Tile.cpp  Tile.h  TileHeights.cpp  TileHeights.h  TileHeightsGenerator.cpp  TileHeightsGenerator.h  TiledTinBuilder.cpp  TiledTinBuilder.h  Tiler.cpp  Tiler.h  TopDownTiler.cpp  TopDownTiler.h  alpine_raster.cpp  alpine_raster.h  cesium_tin_terra.cpp  cesium_tin_terra.h  depth_first_tile_traverser.h  layer_json_writer.cpp  layer_json_writer.h  srs.h  (+1 more)
terrainlib/algorithms/: hasher.h  primitives.h  raster_triangle_scanline.h
terrainlib/ctb/: Bounds.hpp  CTBException.hpp  Coordinate.hpp  Coordinate3D.hpp  GlobalGeodetic.cpp  GlobalGeodetic.hpp  GlobalMercator.cpp  GlobalMercator.hpp  Grid.hpp  NOTICE  TileCoordinate.hpp  types.hpp
terrainlib/tntn/: BinaryIO.cpp  BinaryIO.h  Delaunator.cpp  Delaunator.h  DelaunayMesh.cpp  DelaunayMesh.h  DelaunayTriangle.cpp  DelaunayTriangle.h  File.cpp  FileFormat.h  Mesh.cpp  Mesh.h  Mesh2Raster.cpp  Mesh2Raster.h  MeshIO.cpp  MeshIO.h  MeshWriter.cpp  MeshWriter.h  NOTICE  OFFReader.cpp  OFFReader.h  ObjPool.h  Points2Mesh.cpp  Points2Mesh.h  QuadEdge.cpp  QuadEdge.h  QuantizedMeshIO.cpp  QuantizedMeshIO.h  Raster.h  RasterIO.cpp  RasterIO.h  SuperTriangle.cpp  SuperTriangle.h  SurfacePoints.cpp  SurfacePoints.h  TerraMesh.cpp  TerraMesh.h  TerraUtils.cpp  TerraUtils.h  ZemlyaMesh.cpp  (+20 more)
unittests/: CMakeLists.txt  alpine_raster_format.cpp  bottom_up_tiler.cpp  catch2_helpers.h  cesium_terra_format.cpp  dataset.cpp  dataset_reading.cpp  depth_first_tile_traverser.cpp  grid.cpp  image.cpp  layer_json.cpp  layer_json_writer.cpp  main.cpp  meta_data_generator.cpp  parallel_tile_generator.cpp  parallel_tiler.cpp  progress_indicator_test.cpp  srs_test.cpp  terrainmerger.cpp  tile.cpp  tile_heights.cpp  tile_heights_generator.cpp  tiled_tin_builder.cpp  tiler.cpp  top_down_tiler.cpp
unittests/algorithms/: primitives.cpp  raster_triangle_scanline.cpp
unittests/data/austria/: at.tif.aux.xml  at_mgi.tif  at_wgs84.tif  at_wgs84.tif.aux.xml  data_attribution  gen_test_data.sh
unittests/data/capehorn/: data_attribution  small.tif
unittests/terrainbuilder/: mesh.cpp  mesh_io.cpp  texture.cpp
unittests/terrainmerger/: convert.cpp  merge.cpp  utils.hpp
unittests/tntn/: Delaunay_tests.cpp  File_tests.cpp  Mesh_tests.cpp  OFFReader_tests.cpp  ObjPool_tests.cpp  QuantizedMeshIO_tests.cpp  RasterIO_tests.cpp  RasterOverviews_tests.cpp  Raster_tests.cpp  SimpleRange_tests.cpp  SuperTriangle_tests.cpp  SurfacePoints_tests.cpp  geometrix_tests.cpp  raster_tools_tests.cpp  simple_meshing_tests.cpp  terra_meshing_tests.cpp  test_common.cpp  test_common.h  triangle_indices.cpp  triangle_indices.h  triangle_indices_data.cpp  util_tests.cpp  vertex_points.cpp  vertex_points.h
